--- a/main.css
+++ b/main.css
@@ -6,72 +6,206 @@ body {
   font-family: "Open Sans",
   sans-serif; 
   font-size: 20px;
-  color: #444;
+  color: #fff;
   text-align: center;
   line-height: 1.5;
+  height: 100%;
+}
+main {
+  padding-top: 80px;
+}
+html {
+  height: 100%;
+}
+header {
+  min-height: 80px;
 }
 header .row {
   font-size: 0;
 }
 header,
 footer {
-  padding: 1% 0;
-  background-color: #aaa;
+  padding: 10px 0;
+  background-color: rgb(31, 58, 64);
+}
+.hamburger {
+  float: right;
+  position: relative;
+  top: 10px;
+  cursor: pointer; 
+  margin-right: 15px;
+}
+.hamburger div {
+  width: 35px;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px 0; 
+}
+.hamburger-nav {
+  display: none;
 }
 ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+}
+a:hover {
+  text-decoration: underline;
+}
 .main-nav {
   text-align: right;
+  display: none;
 }
 .logo {
   width: 200px;
   display: inline-block;
 }
+.logo h1 {
+  margin: 0;
+  padding: 10px;
+  font-size: 26px;
+}
 nav {
   width: calc(100% - 200px);
   display: inline-block;
 }
-/*header {
+.container {
+  padding: 15px;
+}
+header .container {
+  padding: 0;
+}
+.col-6 {
+  padding: 0 10px;
+}
+img {
+  width: 100%;
+}
+header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10;
 }
-*/
+
 h1 {
-  font-size: 32px;
-}
-h2 {
   font-size: 26px;
 }
+h2 {
+  font-size: 24px;
+}
 p {
-  font-size: 22px;
+  font-size: 18px;
+  text-align: left;
 }
 li {
-  font-size: 22px;
+  font-size: 18px;
   display: inline-block;
-  padding: 10px;
-}
-section {
-  min-height: 200px;
-  padding: 6% 0;
-  background-color: #bbb;
-}
-
-section:nth-child(even) {
-  background-color: #ddd;
+  padding: 0 10px;
 }
 .container {
   max-width: 1200px;
   margin: auto;
 }
-
+.landing-banner .container, .contact-banner .container{
+  position: relative;
+  top: 40%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+.circle-img {
+  border-radius: 50%;
+  border: 5px solid rgb(0, 206, 209);
+  width: 100%;
+  max-width: 400px;
+  padding: 0;
+}
 .col-6 {
   width: 100%;
+}
+.col-6 p {
+  margin-top: 0;
+}
+.requirements-list li{
+  display: block;
+  text-align: left;
+  padding: 0;
+}
+.landing-banner {
+  display: none;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(dark-sunset.jpg) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.png) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
+  height: calc(100vh - 80px);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.contact-banner {
+  display: none;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(long-cloud.jpg) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.png) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
+  height: calc(100vh - 80px);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.projects-banner {
+  display: none;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(frosty.jpg) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.png) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
+  height: auto;
+  min-height: calc(100vh - 80px);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.about-banner {
+  display: none;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(mountain-ruins.JPG) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(mountain-ruins.JPG) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(mountain-ruins.JPG) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(mountain-ruins.JPG) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(mountain-ruins.JPG) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(mountain-ruins.JPG) no-repeat;
+  height: auto;
+  min-height: calc(100vh - 80px);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.show {
+  display: block;
+}
+.tech-used {
+  display: flex;
+  margin-top: 15px;
+  background-color: #fff;
+  justify-content: space-evenly;
+}
+.tech-used li {
+  padding: 10px;
 }
 @media screen and (min-width: 676px) {
 
@@ -81,7 +215,28 @@ section:nth-child(even) {
   .row {
     display: flex;
   }
+  header .row {
+    display: block;
+  }
   .col-6 {
     width: 50%;
+  }
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 34px;
+  }
+  p {
+    font-size: 26px;
+  }
+  li {
+    font-size: 26px;
+  }
+  .hamburger {
+    display: none;
+  }
+  .main-nav {
+    display: block;
   }
 }
