--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ header {
 }
 
 h1 {
-  font-size: 26px;
+  font-size: 40px;
 }
 h2 {
   font-size: 24px;
@@ -142,12 +142,12 @@ li {
 }
 .landing-banner {
   display: none;
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(dark-sunset.jpg) no-repeat;
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.png) no-repeat;
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.jpg) no-repeat;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(dark-sunset.JPG) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
   height: calc(100vh - 80px);
   background-position: center center;
   background-repeat: no-repeat;
@@ -156,12 +156,12 @@ li {
 }
 .contact-banner {
   display: none;
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(long-cloud.jpg) no-repeat;
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.png) no-repeat;
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.jpg) no-repeat;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(long-cloud.JPG) no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
   height: calc(100vh - 80px);
   background-position: center center;
   background-repeat: no-repeat;
@@ -173,7 +173,7 @@ li {
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(31, 58, 64, 1))), url(frosty.jpg) no-repeat;
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.png) no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(frosty.jpg) no-repeat;
   height: auto;
@@ -223,7 +223,12 @@ li {
   transition: all .5s;
 }
 @media screen and (min-width: 676px) {
-
+  .hamburger {
+    display: none;
+  }
+  .main-nav {
+    display: block;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -248,10 +253,5 @@ li {
   li {
     font-size: 26px;
   }
-  .hamburger {
-    display: none;
-  }
-  .main-nav {
-    display: block;
-  }
+
 }
