--- a/main.css
+++ b/main.css
@@ -116,12 +116,7 @@ li {
   max-width: 1200px;
   margin: auto;
 }
-.landing-banner .container, .contact-banner .container{
-  position: relative;
-  top: 40%;
-  transform: translateY(-50%);
-  text-align: center;
-}
+
 .circle-img {
   border-radius: 50%;
   border: 5px solid rgb(0, 206, 209);
@@ -148,7 +143,8 @@ li {
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(dark-sunset.JPG) no-repeat;
-  height: calc(100vh - 80px);
+  height: auto;
+  min-height: calc(100vh - 80px);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -162,7 +158,8 @@ li {
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(31, 58, 64, 1) 100%), url(long-cloud.JPG) no-repeat;
-  height: calc(100vh - 80px);
+  height: auto;
+  min-height: calc(100vh - 80px);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -228,6 +225,15 @@ li {
   }
   .main-nav {
     display: block;
+  }
+  .landing-banner, .contact-banner {
+    height: calc(100vh - 80px);
+  }
+  .landing-banner .container, .contact-banner .container{
+    position: relative;
+    top: 40%;
+    transform: translateY(-50%);
+    text-align: center;
   }
 }
 
